[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/light.png" type="Texture" id=1]
[ext_resource path="res://assets/fly.png" type="Texture" id=2]
[ext_resource path="res://entities/Enemy/Fly/FlyOld.gd" type="Script" id=3]


[sub_resource type="CapsuleShape2D" id=1]
radius = 7.50694
height = 6.97473

[node name="Fly" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.94387, 2.34885 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -16, 16 )

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="RandomMoveTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 10, 6 )
enabled = false
texture = ExtResource( 1 )
color = Color( 0.980392, 0.662745, 0.215686, 1 )
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
[connection signal="timeout" from="RandomMoveTimer" to="." method="_on_RandomMoveTimer_timeout"]
[connection signal="timeout" from="AttackChargeTimer" to="." method="_on_AttackTimer_timeout"]
